--- a/A5/References.bib
+++ b/A5/References.bib
@@ -270,4 +270,16 @@ url = {http://www.chargingchargers.com/tutorials/charging.html},
 year = {2015}
 }
 
+
+@misc{difAmp,
+	author = {{Electronics Tutorials}},
+	title = {The Differential Amplifier},
+	url = {https://www.electronics-tutorials.ws/opamp/opamp_5.html},
+	year = {2018}
+}
+
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
