--- a/A5/e344_A1_report.tex
+++ b/A5/e344_A1_report.tex
@@ -130,7 +130,7 @@
 \include{DesignDetails}
 %%%%%%%%%%%%%
 \include{Results}
-
+\include{SystemResults.tex}
 % Bibliography
 \bibliography{References}
 
