--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -316,9 +316,9 @@ If $R_9$ is chosen to be 100k\textohm \ $R_{10}$ will be 26.3k\textohm.
 f_c=\frac{1}{2\times pi\times R\times C}
 \label{eq:freq}
 \end{equation}
-To prevent the noise of the ac wall plug from interfering with the measurement the low pass cut off filter is designed to cut off 10Hz before 50Hz to ensure a cleaner signal. The capacitor is chosen to be 100nF. Cutting off at a lower frequency would get rid of more noise however the rise time is dependant on the cut off frequency, $T_r \approx \frac{0.35}{f_c}$. For this reason the cut off frequency  is not designed too low.  As an example the error that a 100mV offset on the input to the ADC will have is calculated as $\frac{100mV}{5V}\times 24=0.48V$
+To prevent the noise of the ac wall plug from interfering with the measurement the low pass cut off filter is designed to cut off at half of 50Hz to ensure a cleaner signal. The capacitor is chosen to be 200nF. Cutting off at a lower frequency would get rid of more noise  and attenuate 50Hz noise better, however the rise time is dependant on the cut off frequency. $T_r \approx \frac{0.35}{f_c}$. For this reason the cut off frequency  is not designed too low.  As an example the error that a 100mV offset on the input to the ADC will have is calculated as $\frac{100mV}{5V}\times 24=0.48V$
 
-Using eq.\ref{eq:freq} with a chosen capacitor of 100nF the required resistance for a 40Hz cut off is found to be 39.78k\textohm.
+Using eq.\ref{eq:freq} with a chosen capacitor of 200nF the required resistance for a 25Hz cut off is found to be 32k\textohm.
 
 \begin{figure}[!htb]
 	\centering
@@ -328,8 +328,10 @@ Using eq.\ref{eq:freq} with a chosen capacitor of 100nF the required resistance 
 \end{figure}
 
 
+\newpage
+
 \section{Battery voltage measurement}
-In this design the battery voltage will be go through a signal conditioning process to make it readable from the perspective of an ADC. The ADC we are going to use requires a voltage between 0 and 5V. The battery voltage will vary between 6V and 7.2V if the complete system is working as designed. For the purpose of the design an additional 0.3V will be extended on to either side of the boundaries to give a margin for error (5.7V to 7.5V).  Using Op Amps the battery voltage will be designed to vary linearly with an output swing of four volts. This four volts will be equally spaced from the 0 and 5V boundaries of the ADC (0.5V to 4.5V), the output swing is less than 5V in order to prevent possible damage to the ADC in the case that the reconditioned battery voltage exceeds 5V. 
+In this design the battery voltage will be go through a signal conditioning process to make it readable from the perspective of an ADC. The ADC we are going to use requires a voltage between 0 and 5V. The battery voltage will vary between 6V and 7.2V if the complete system is working as designed. For the purpose of the design an additional 0.3V will be extended on to either side of the boundaries to give a margin for error (5.7V to 7.5V).  Using Op Amps the battery voltage will be designed to vary linearly with an output swing of 4.3V. This output is less than 5 in order to prevent damage to the ADC as well as the op amps.
 
 Another consideration that needs to be made is that our differential voltage and common mode voltage requirement must be met ($|V_{SS}-V_{DD}|$ and  $V_{SS}$ – 0.3 — $V_{DD}$ + 0.3) \cite{MCP}. To fit this requirement the input voltage is divided with resistors to be  four volts at the maximum designed voltage of 7.5V  as can be see in figure \ref{fig:batcirc}, this will result in a voltage of 3.04V when the battery voltage is 5.7V.
 
@@ -340,23 +342,23 @@ Another consideration that needs to be made is that our differential voltage and
 	\label{fig:difamp}
 \end{figure}
 
-To achieve the differential amplifier setup from figure \ref{fig:difamp} is used. In this design $R_1$=$R_2$ and $R_3$=$R_4$ \cite{difAmp}. The corresponding equation is as seen in equation \ref{eq:diff}.  $V_2$ will be used as the reference voltage and $V_1$ will be our input from the battery. With this configuration the output will be inverted, but this is not a problem because it can be calibrated accordingly in the arduino software.
+To achieve the differential amplifier setup from figure \ref{fig:difamp} is used. In this design $R_1$=$R_2$ and $R_3$=$R_4$ \cite{difAmp}. The corresponding equation is as seen in equation \ref{eq:diff}.  $V_1$ will be used as the reference voltage and $V_2$ will be our input from the battery.
 
 \begin{equation}
-	V_{out}=\frac{R_3}{R_1}\times(V_{2(ref)}-V_{1(bat)}) 
+	V_{out}=\frac{R_3}{R_1}\times(V_{2(bat)}-V_{1(ref)}) 
 	\label{eq:diff}
 \end{equation}
 
-Using eq.\ref{eq:diff} $V_{2(ref)}$ is solved for simultaneously by setting the equations for the scenario when the battery voltage is 7.5V and 5.7V.
+Using eq.\ref{eq:diff} $V_{1(ref)}$ is solved for simultaneously by setting the equations for the scenario when the battery voltage is 7.5V and 5.7V.
 
 \begin{center}
-	 $4.5V=\frac{R_3}{R_1}\times(V_{2(ref)}-3.04V) \ \ \ \ \ \ \ \ 0.5V=\frac{R_3}{R_1}\times(V_{2(ref)}-4V) $\newline 
+	 $4.8V=\frac{R_3}{R_1}\times(4V-V_{1(ref)}) \ \ \ \ \ \ \ \ 0.5=\frac{R_3}{R_1}\times(3.04V-V_{1(ref)}) $\newline 
 	
-	$\frac{4.5V}{(V_{2(ref)}-3.04V)}=\frac{0.5V}{(V_{2(ref)}-4V)}  \ \ \ \ \ \ \ \ V_{2(ref)}=4.12V \ \ \ \ \ \ \frac{R_3}{R_1}=4.167$\newline
+	$\frac{4.8V}{(V_{1(ref)}-4V)}=\frac{0.5V}{(V_{1(ref)}-3.04V)}  \ \ \ \ \ \ \ \ V_{1(ref)}=2.93V \ \ \ \ \ \ \frac{R_3}{R_1}=4.48$\newline
 \end{center}
 
 
-$R_3$ is then chosen to be 112k\textohm  (100k\textohm +12k\textohm in lab resistors). $R_1$ is the calculated to be 26.9k\textohm  (27k\textohm   in lab resistors). Both $V_1$ and $V_2$ need to be divided to a lower voltages 4.12V and four volts, the relevant resistors for the voltage division can be seen in figure \ref{fig:batcirc}.  $V_1$ requires a buffer in between the divided battery voltage and the differential op amp to prevent the negative feedback from interfering with the input voltage. $V_2$ also requires a buffer because otherwise $R_2$ and $R_4$ will the change the effective voltage division and 4.12V will not be achieved. 
+$R_3$ is then chosen to be 100k\textohm. $R_1$ is the calculated to be 22.32k\textohm. Both $V_1$ and $V_2$ need to be divided to a lower voltages 2.93V and four volts (when battery is at 7.5V), the relevant resistors for the voltage division can be seen in figure \ref{fig:batcirc}.  $V_1$ requires a buffer in between the divided battery voltage and the differential op amp to prevent the negative feedback from interfering with the input voltage. $V_2$ also requires a buffer because otherwise $R_2$ and $R_4$ will the change the effective voltage division and 2.93V would not be achieved. 
 
 \begin{figure}[!htb]
 	\centering
