--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -304,7 +304,7 @@ Because 100mA is the maximum current a 2n7000 NMOS chip was deemed enough to be 
 
 \newpage
 \section{Supply voltage measurement}
-The Supply voltage of supply will vary from voltages of zero volt to just below 23V. To measure the supply measurement needs to converted to a voltage between zero and five volts in order for the arduino beetle to successfully read a voltage without breaking. There should be a boundary between 5V and the maximum converted voltage. To implement this a maximum voltage of 24V is designed for instead of 23V. One of the two possible supplies, the AC wall plug will introduce noise into the circuit. This noise will likely be 50Hz which will be designed for adequately using a low pass RC filter.
+The Supply voltage of supply will vary from voltages of zero volt to just below 23V. To measure the supply measurement needs to converted to a voltage between zero and five volts in order for the arduino beetle to successfully read a voltage without breaking. There should be a boundary between 5V and the maximum converted voltage. To implement this a maximum voltage of 24V is designed for instead of 23V. One of the two possible supplies, the AC wall plug will introduce noise into the circuit (50Hz from the mains). This noise will likely be 50Hz which will be designed for adequately using a low pass RC filter.
 
 
 \begin{center}
@@ -316,7 +316,7 @@ If $R_9$ is chosen to be 100k\textohm \ $R_{10}$ will be 26.3k\textohm.
 f_c=\frac{1}{2\times pi\times R\times C}
 \label{eq:freq}
 \end{equation}
-To prevent the noise of the ac wall plug from interfering with the measurement the low pass cut off filter is designed to cut off at half of 50Hz to ensure a cleaner signal. The capacitor is chosen to be 200nF. Cutting off at a lower frequency would get rid of more noise  and attenuate 50Hz noise better, however the rise time is dependant on the cut off frequency. $T_r \approx \frac{0.35}{f_c}$. For this reason the cut off frequency  is not designed too low.  As an example the error that a 100mV offset on the input to the ADC will have is calculated as $\frac{100mV}{5V}\times 24=0.48V$
+To prevent the noise of the ac wall plug from interfering with the measurement the low pass cut off filter is designed to cut off at half of 50Hz to ensure a cleaner signal. The capacitor is chosen to be 200nF. Cutting off at a lower frequency would get rid of more noise  and attenuate 50Hz noise better, however the rise time is dependant on the cut off frequency. $T_r \approx \frac{0.35}{f_c}$. For this reason the cut off frequency is not designed too low.  As an example the error that a 100mV offset on the input to the ADC will have is calculated as $\frac{100mV\times 26}{126}= V_{error}$, $V_{error}$ is then equal to 0.48V. This indicates the need for a filter.
 
 Using eq.\ref{eq:freq} with a chosen capacitor of 200nF the required resistance for a 25Hz cut off is found to be 32k\textohm.
 
@@ -331,7 +331,7 @@ Using eq.\ref{eq:freq} with a chosen capacitor of 200nF the required resistance 
 \newpage
 
 \section{Battery voltage measurement}
-In this design the battery voltage will be go through a signal conditioning process to make it readable from the perspective of an ADC. The ADC we are going to use requires a voltage between 0 and 5V. The battery voltage will vary between 6V and 7.2V if the complete system is working as designed. For the purpose of the design an additional 0.3V will be extended on to either side of the boundaries to give a margin for error (5.7V to 7.5V).  Using Op Amps the battery voltage will be designed to vary linearly with an output swing of 4.3V. This output is less than 5 in order to prevent damage to the ADC as well as the op amps.
+In this design the battery voltage will be go through a signal conditioning process to make it readable from the perspective of an ADC. The ADC we are going to use requires a voltage between 0 and 5V. The battery voltage will vary between 6V and 7.2V if the complete system is working as designed. For the purpose of the design an additional 0.3V will be extended on to either side of the boundaries to give a margin for error (5.7V to 7.5V).  Using Op Amps the battery voltage will be designed to vary linearly with an output swing of 4.3V (0.5V to 4.8V). As the battery voltage increases the ADC voltage will increase. The ADC output is less than five volts in order to prevent damage to the ADC as well as the op amps. The chosen resistors are chosen to be bigger than 20k\textohm \ in order to minimise current drawn from the battery and the five volt regulator. 
 
 Another consideration that needs to be made is that our differential voltage and common mode voltage requirement must be met ($|V_{SS}-V_{DD}|$ and  $V_{SS}$ – 0.3 — $V_{DD}$ + 0.3) \cite{MCP}. To fit this requirement the input voltage is divided with resistors to be  four volts at the maximum designed voltage of 7.5V  as can be see in figure \ref{fig:batcirc}, this will result in a voltage of 3.04V when the battery voltage is 5.7V.
 
@@ -349,7 +349,7 @@ To achieve the differential amplifier setup from figure \ref{fig:difamp} is used
 	\label{eq:diff}
 \end{equation}
 
-Using eq.\ref{eq:diff} $V_{1(ref)}$ is solved for simultaneously by setting the equations for the scenario when the battery voltage is 7.5V and 5.7V.
+Using eq.\ref{eq:diff} $V_{1(ref)}$ and the gain is solved for simultaneously, by setting the equations for the scenarios when the battery voltage is 7.5V and 5.7V.
 
 \begin{center}
 	 $4.8V=\frac{R_3}{R_1}\times(4V-V_{1(ref)}) \ \ \ \ \ \ \ \ 0.5=\frac{R_3}{R_1}\times(3.04V-V_{1(ref)}) $\newline 
@@ -362,7 +362,7 @@ $R_3$ is then chosen to be 100k\textohm. $R_1$ is the calculated to be 22.32k\te
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=0.45\linewidth]{Figures/A6/Batterysig.jpg}
+	\includegraphics[width=0.5\linewidth]{Figures/A6/Batterysig.jpg}
 	\caption{Battery measurement circuit}
 	\label{fig:batcirc}
 \end{figure}
